[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.21.0", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
pollster = "0.4.0"
wgpu = "24"
winit = "0.29"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png"]
